@@ -1,5 +1,10 @@
 2009-09-10  Milan Zamazal  <pdm@brailcom.org>
 
+	* tools/genmenu.py:
+	Add `Note:' prefix to genmenu notification messages.
+
+2009-09-10  Milan Zamazal  <pdm@brailcom.org>
+
 	* doc/tutorials/DmpDb:
 	* doc/tutorials/dmp:
 	DMP documentation updated.
